Updating index project image file paths

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                               </p>
 
                               <div class="accordion">
-                                  <div class="accordion-item" data-image="/assets/321.png">
+                                  <div class="accordion-item" data-image="./assets/321.png">
                                       <a href="https://321published.com/" class="accordion-link">
                                           <h1>321 Published</h1>
                                           <div class="accordion-item-content">
@@ -260,7 +260,7 @@
                                           </div>
                                       </a>
                                   </div>
-                                  <div class="accordion-item" data-image="/assets/silver.png">
+                                  <div class="accordion-item" data-image="./assets/silver.png">
                                       <a href="https://www.silverliningads.com/" class="accordion-link">
                                           <h1>Silver Lining Ads</h1>
                                           <div class="accordion-item-content">
@@ -270,7 +270,7 @@
                                           </div>
                                       </a>
                                   </div>
-                                  <div class="accordion-item" data-image="/assets/primack.png">
+                                  <div class="accordion-item" data-image="./assets/primack.png">
                                       <a href="https://www.primack.com/" class="accordion-link">
                                           <h1>Primack Property Management</h1>
                                           <div class="accordion-item-content">
@@ -280,7 +280,7 @@
                                           </div>
                                       </a>
                                   </div>
-                                  <div class="accordion-item" data-image="/assets/anbrentals.png">
+                                  <div class="accordion-item" data-image="./assets/anbrentals.png">
                                       <a href="https://www.anbpartyrentals.com/" class="accordion-link">
                                           <h1>ANB Party Rentals</h1>
                                           <div class="accordion-item-content">
@@ -290,7 +290,7 @@
                                           </div>
                                       </a>
                                   </div>
-                                  <div class="accordion-item" data-image="/assets/proshield.png">
+                                  <div class="accordion-item" data-image="./assets/proshield.png">
                                       <a href="https://proshieldfireprotection.com/" class="accordion-link">
                                           <h1>Proshield Fire Protection</h1>
                                           <div class="accordion-item-content">
@@ -300,7 +300,7 @@
                                           </div>
                                       </a>
                                   </div>
-                                  <div class="accordion-item" data-image="/assets/zoia.png">
+                                  <div class="accordion-item" data-image="./assets/zoia.png">
                                       <a href="https://zoiasciences.com/" class="accordion-link">
                                           <h1>Zoia Sciences</h1>
                                           <div class="accordion-item-content">
@@ -310,7 +310,7 @@
                                           </div>
                                       </a>
                                   </div>
-                                  <div class="accordion-item" data-image="/assets/heavensauto.png">
+                                  <div class="accordion-item" data-image="./assets/heavensauto.png">
                                       <a href="https://heavensautotech.com/" class="accordion-link">
                                           <h1>Heavens Auto Tech</h1>
                                           <div class="accordion-item-content">
@@ -320,7 +320,7 @@
                                           </div>
                                       </a>
                                   </div>
-                                  <div class="accordion-item" data-image="/assets/century-cuts.png">
+                                  <div class="accordion-item" data-image="./assets/century-cuts.png">
                                       <a href="#" class="accordion-link">
                                           <h1>Century Cuts Barbershop</h1>
                                           <div class="accordion-item-content">
@@ -343,7 +343,7 @@
                           </div>
                       </div>
                       <div class="project-img accordion-img">
-                          <img src="/assets/wp.png" alt="Project Image" />
+                          <img src="./assets/wp.png" alt="Project Image" />
 
                       </div>
                   </div>
