--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
 
       <!-- CONTENT -->
-      <div class="container" style="overflow: hidden;">
+      <div class="container" style="overflow: hidden !important;">
           <!-- HERO SECTION -->
           <section class="hero" id="hero">
               <div class="hero-img">
