Updating description and contact info

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                   </div>
                   <div class="about-col">
                       <h2>
-                          29 year old Full Stack Software Developer eager to take on new ventures
-                          and projects in the world of coding.
+                          29 year old Software and Web Developer with over 2 years of experience
+                          eager to take on new ventures in the world of coding.
                           <span style="opacity: 0">.</span>
                       </h2>
 
@@ -680,8 +680,9 @@
               </div>
 
               <div class="footer-copyright">
-                  <p>Broman</p>
-                  <p>Est. 2023</p>
+                  <p>Brandon Roman</p>
+                  <p>roman.brandon@outlook.com</p>
+                  <p>Est. 2022</p>
               </div>
           </footer>
       </div>
